--- a/website/pages/blog/finding-outdated-aws-iam-policy-version-elements.mdx
+++ b/website/pages/blog/finding-outdated-aws-iam-policy-version-elements.mdx
@@ -216,7 +216,7 @@ OR version is NULL;
 
 ## Conclusion
 
-Legacy policy verions can be problematic for developers and application teams given the difference in interpretation by AWS.  
+Legacy policy versions can be problematic for developers and application teams given the difference in interpretation by AWS.  
 
 We would like to see the following from AWS:
 * Example and default policies should have default policy versions set to `2012-10-17`.
