--- a/website/pages/blog/finding-outdated-aws-iam-policy-version-elements.mdx
+++ b/website/pages/blog/finding-outdated-aws-iam-policy-version-elements.mdx
@@ -74,7 +74,7 @@ With the AWS CLI, we get a `MalformedPolicyDocument`` error:
 
 However, these controls are inconsistent and do not apply to inline policies.  Inline policies still can be created with legacy policy versions of `2008-10-17` or with no `Version` specified.    
 
-We used the following json as our policy json:
+We used the following JSON as our policy:
 ```json copy
 {
     "Version": "2008-10-17",
