--- a/website/pages/blog/finding-outdated-aws-iam-policy-version-elements.mdx
+++ b/website/pages/blog/finding-outdated-aws-iam-policy-version-elements.mdx
@@ -1,5 +1,5 @@
 ---
-title: Finding Outdated AWS IAM Version Policy Elements
+title: Outdated Default AWS IAM Policy Language Versions 
 tag: security
 date: 2023/02/16
 description: >-
