--- a/website/pages/docs/plugins/sources/postgresql/overview.mdx
+++ b/website/pages/docs/plugins/sources/postgresql/overview.mdx
@@ -67,7 +67,7 @@ Note: Make sure you use environment variable expansion in production instead of 
 
 The PostgreSQL source can be run in debug mode.
 
-Note: This will use [`pgx`](https://github.com/jackc/pgx) built-in logging and might output data/sensitive information to logs so make sure to not use it in production but only for debugging.
+Note: This will use [`pgx`](https://github.com/jackc/pgx) built-in logging and might output data/sensitive information to logs so make sure to not use it in production, only for debugging.
 
 ```yaml copy
 kind: source
